--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 
                 <div class="input-wrapper">
                     <label for="event-nome">Nome</label>
-                    <input type="text" id="event-nome" required>
+                    <input type="text" id="event-nome">
                 </div>
 
                 <div class="input-wrapper">
                     <label for="event-sobrenome">Sobrenome</label>
-                    <input type="text" id="event-sobrenome" required>
+                    <input type="text" id="event-sobrenome">
                 </div>
 
               </div>
@@ -51,7 +51,7 @@
 
                 <div class="input-wrapper">
                     <label for="event-password">Senha <span>(mínimo de 6 caracteres)</span></label>
-                    <input type="password" id="event-password" required>
+                    <input type="password" id="event-password">
                 </div>
 
             </div>
@@ -64,7 +64,7 @@
 
               <div class="input-wrapper">
                   <label for="event-nome">Nome do seu mentor <span>(só o primeiro nome)</span></label>
-                  <input type="text" id="event-nome" required>
+                  <input type="text" id="event-nome">
               </div>
 
           </div>
@@ -80,17 +80,17 @@
 
                 <div class="input-wrapper">
                   <label for="event-date">Data</span></label>
-                  <input type="date" id="event-date" required>
+                  <input type="date" id="event-date">
                 </div>
 
                 <div class="input-wrapper">
                   <label for="event-begin">Das</span></label>
-                  <input type="time" id="event-begin" required>
+                  <input type="time" id="event-begin">
                 </div>
   
                 <div class="input-wrapper">
                   <label for="event-end">Até</span></label>
-                  <input type="time" id="event-end" required>
+                  <input type="time" id="event-end">
                 </div>
 
               </div>
@@ -101,17 +101,17 @@
 
                 <div class="input-wrapper">
                   <label for="event-date">Data</span></label>
-                  <input type="date" id="event-date" required>
+                  <input type="date" id="event-date">
                 </div>
 
                 <div class="input-wrapper">
                   <label for="event-begin">Das</span></label>
-                  <input type="time" id="event-begin" required>
+                  <input type="time" id="event-begin">
                 </div>
   
                 <div class="input-wrapper">
                   <label for="event-end">Até</span></label>
-                  <input type="time" id="event-end" required>
+                  <input type="time" id="event-end">
                 </div>
 
               </div>
